@@ -1,3 +1,7 @@
+2014-05-08  polarnik  <owasp@ya.ru>
+
+	* LoaderAll.cs: 
+
 2014-03-29  polarnik  <owasp@ya.ru>
 
 	* LoaderAll.cs: Suppport Windows Authentification. Добавлена
